2014-09-23  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-45

	* pyatmlab/collocations.py(CollocationDescriber):

	- Add mask info in filename

	- Temporarily (?) disable setting a priori to nan outside interpolated
	range.  It should not be necessary to extrapolate a priori where I
	have averaging kernels but not a priori...

	- When calculating percentiles, consider only finite data.

	- Write data file for raw and smooth, filtered and unfiltered

	* pytmlab/dataset.py(Dataset):

	- Reduce verbosity when reading granules

	* pyatmlab/graphics.py(print_or_show):

	- Allow to write multiple data files

2014-09-17  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-44

	* pyatmlab/collocations.py:

	(CollocatedDataset):

	- When collocating, use default start_date, end_date derived from base
	datasets

	- When reading, only return those collocations in the time period
	requested, nothing more.

	(CollocationDescriber):

	- Work on figure filenames
	- Set intervals to lowest/highest values of timedelta64 in seconds, as
	 +/- infinity does not work as expected (see also
	 https://github.com/numpy/numpy/issues/5079).
	- Allow to set mask explicitly, externally
	- Don't extrapolate averaging kernel matrix
	
	* pyatmlab/dataset.py:

	(Dataset):

	- Add attribute 'related' that can be used to point to dmp-object

	(MultiFileDataset):

	- When reading period, include end points
	- When looking for granules, also consider 'tod' in seconds since
	midnght

	* pyatmlab/datasets.py(ACEFTS):

	- Orbit alone is not unique, (also) consider time
	- chain ValueError with InvalidFileError if reading fails, so it can
	be properly caught higher up

	* pyatmlab/math.py(linear_interpolation_matrix):

	- Pointed out caveat with extrapolation

2014-08-26  Gerrit Holl  <gerrit.holl@utoronto.ca>:

	* pyatmlab-0-0-43

	* pyatmlab/collocations.py:

	(CollocatedDataset):

	- Use own errors to catch more tightly

	(CollocationDescriber):

	- Correct non-finite z as invalid
